	
Students: added parent information to leaver report
	Edited file /modules/Students/report_students_left.php

General: changed all references of thegibbon.org to gibbonedu.org
	Edited various files

Students: added parental emails to data update history, to allow for emailing of recalcitrant parents
	Edited file /modules/Students/report_students_dataUpdaterHistory.php
	

v6.0.00
-------
Library: added new status 'In Use'
	Edited table gibbonLibraryItem
	Edited files /modules/Library/library_manage_catalog.php, library_manage_catalog_add.php, library_manage_catalog_edit.php
	
General: lightened text drop shadows
	Edited file /themes/Default/css/main.css

Behaviour: added type filter in behaviour manage
	Edited file /modules/Behaviour/manage_behaviour.php

User Admin: improved display of application forms
	Edited file /modules/User Admin/applicationForm_manage.php

General: fixed index page typos in applications section
	Edited file /index.php

Planner: fixed issue in homework listing, which prevent breadcrumb trail from working properly
	Edited file /modules/Planner/planner_deadlines.php

Planner: fixed typos
	Edited file /modules/Planner/planner_edit.php
	Edited file /modules/Departments/departmnet_course_class_full.php

Planner: fixed issue which causes completes to be overwritten when editing a working unit
	Edited file /modules/Planner/units_edit_workingProcess.php

Activities: added ability for parent to sign up for activities on student's behalf
	New values in tables gibbonAction, gibbonPermission
	Edited files /modules/Activities/activities_view.php, activities_view_register*.php

Planner: increased outcome name max length to 100 char and name short length to 14 char
	Edited table gibbonOutcome
	Edited files /modules/Planner/outcomes_add.php, outcomes_edit.php
	
User Admin: added fields to record whether or not staff are first aid qualified.
	Edited table gibbonStaff

User Admin: added  "Back To Search Results" links to pages leading of User Manage main page